Switch to java 1.8 (for server)